Fix dashboard nav header alignment

--- a/resources/less/dashboard.less
+++ b/resources/less/dashboard.less
@@ -120,7 +120,7 @@
 		}
 
 		.nav {
-			margin-top: -15px;
+			margin-top: -20px;
 			list-style: none;
 
 			li {
